--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="public_switch_image">Public switch image.</string>
+    <string name="google_maps_key">AIzaSyCfnUo0uXNapdCIcOQZmkb-cR6Tf4vKXDI</string>
 </resources>
